# humble-rentals-website

./: netlify.toml
citypack-website/: .gitignore  CLAUDE.md  README.md  TODO.md  _redirects  cities.html  color-lookbook.html  company.html  content-editor-guide.md  customers.html  how-it-works.html  impact.html  index.html  lab-seven-premium.html  netlify.toml  package-lock.json  package.json  rebrand.sh  resources.html  solutions.html  technology.html  test.html
dual_agent/: AUTO-LOAD.md  BULLETPROOF-SUMMARY.md  CLAUDE.md  PLAYBOOK-UPDATE-FIX.md  README.md  RELIABILITY-ANALYSIS.md  RELIABILITY-IMPROVEMENTS.md  SCREENSHOT-TOOL-SETUP.md
fieldpack/vc_sniping/builder-signal-harvester/: .env.example  IMPLEMENTATION_SUMMARY.md  README.md  pyproject.toml  requirements.txt
fieldpack/vc_sniping/builder-signal-harvester/docs/plans/: 2025-11-02-builder-harvester-design.md
fieldpack/vc_sniping/builder-signal-harvester/prompts/: classifier_prompt.md
fieldpack/vc_sniping/builder-signal-harvester/src/builder_harvester/: __init__.py  cli.py  export.py  merging.py  models.py  scoring.py
fieldpack/vc_sniping/builder-signal-harvester/src/builder_harvester/harvesters/: __init__.py  base.py  gh.py
fieldpack/vc_sniping/builder-signal-harvester/tests/: test_export.py  test_merging.py  test_models.py  test_scoring.py
fieldpack/vc_sniping/builder-signal-harvester/tests/harvesters/: test_base.py  test_gh.py
lab/: .gitignore  DESIGN_SYSTEM.md  README.md  _redirects  cities.html  city-services.html  color-lookbook.html  company.html  customers.html  experience-agencies.html  (+13 more)
(+157 files in other folders)
