[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "builder-harvester"
version = "0.1.0"
description = "Find technical operator-angels via Product Hunt/GitHub builder breadcrumbs"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "pandas>=2.2.0",
    "pydantic>=2.8.0",
    "anthropic>=0.34.0",
    "python-dotenv>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
